2023-04-03 [3.1]
* oprava scrobble pre trakt.tv
* pridanie automatického spustenia titulkov a zmenu audio streamu
* oprava triedenia v a-z priečinkoch

2023-04-03 [3.0]
* kompletný prepis doplnku postavený nad tools_archivczsk
* úprava rozhrania po vzore oficiálneho kodi doplnku
* pridanie histórie sledovania podľa jednotlivých kategórii a integrácia s trakt.tv
* pridanie možnosti vyhľadania filmu na prehraj.to
* mnoho rôznych vylepšení

2023-03-06 [2.3.3]
* oprava nastavovania timeoutu pre požiadavky
* pridanie chybových výpisov pri zlyhaní požiadavky

2023-03-06 [2.3.2]
* oprava autorizácie

2023-02-23 [2.3.1]
* oprava pádu pri konverzii názvu pre python3
* oprava stránkovania

2023-01-28 [2.3.0]
* konverzia na modul pre archivCZSK >= 2.0.0

2023-01-21 [2.2.5]
* zmena protokolu pre pripojenie k SCC z https na http

2023-01-20 [2.2.4]
* update na nove API a par uprav

2022-05-23 [2.2.3]
* oprava pádu pri nedostupnosti ydl

2022-04-08 [2.2.2]
* added more debug messages when login to ws fails

2022-04-05 [2.2.1]
* fixed login and other python 3.x related fixes

2022-04-04 [2.2.0]
* make addon python 3.x compatible

2021-07-10 [2.1.26]
 * strankovani epizod >100

2021-05-13 [2.1.25]
 * oprava CSFD dotazu po zmene CSFD webu

2021-01-26 [2.1.24]
 * oprava zobrazovani sezon serialu

2021-01-20 [2.1.23]
 * vanoce jsou pryc
 * uprava zobrazeni nazvu
 * oprava mono zvuku

2020-12-26 [2.1.21]
 * uprava zobrazeni vyberu streamu
 * uprava zobrazeni titulu pri prehravani
 * oprava zobrazeni koncertu

2020-12-21 [2.1.20]
 * vanocni nadilka a ikona

2020-12-11 [2.1.19]
 * oprava zobrazeni a filtru jazyka
 * menu Trailer zobrazi vsechny dostupne videa

2020-12-08 [2.1.18]
 * oprava zobrazeni Podle filtru (a-z, zanr, zeme, rok, studio)

2020-12-06 [2.1.17]
 * pridany koncerty
 * oprava zobrazeni hodnoceni a traileru

2020-12-04 [2.1.16]
 * oprava epizod u serialu (nektere nemaji sezony)
 * oprava chyby Podle jazyka (nevraci aktualne nic)

2020-11-30 [2.1.15]