@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.1">
+<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.2">
 	<requires>
 		<import addon="enigma2.archivczsk" version="2.2.1"/>
 		<import addon="tools.archivczsk" version="1.9" />
 	</requires>
 	<extension point="archivczsk.addon.seeker"/>
+	<extension point="archivczsk.addon.seeker" name="Prehraj.to" id="prehrajto"/>
 	<extension point="archivczsk.addon.video"/>
 	<extension point="archivczsk.addon.metadata">
 		<description>Stream Cinema Community - web storage content player</description>
